# fastrometry

./: .gitignore  README.md  develop.txt  github instructions.txt  pyproject.toml  setup.cfg  setup.py
src/fastrometry/: __init__.py  catalogue.py  fastrometry.py
src/fastrometry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/fastrometry/cython_code/: PSE.c  PSE.cp310-win_amd64.pyd  PSE.pyx  WCS.c  WCS.cp310-win_amd64.pyd  WCS.pyx  __init__.py
src/fastrometry_finaltest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/fastrometry_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
