[metadata]
name = fastrometry-test
author = Cameron Leahy, Joseph Postma
author_email = cameron.leahy@ucalgary.ca, joepostma@live.ca
version = attr: fastrometry.fastrometry.VERSION
description = Astronomy package written in Python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU General Public License (GPL)
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    astropy>=5.1
    numpy>=1.22.4
    scipy>=1.8.1
    AstraCarta >= 1.0.15

[options.entry_points]
console_scripts =
    fastrometry = fastrometry.fastrometry:fastrometryCall

[options.packages.find]
where = src